# cloudkeeper-os

./: .flake8  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.rst  Dockerfile  HACKING.rst  README.md  README.rst  cloudkeeper-os-client.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
cloudkeeper_os/: __init__.py  cloudkeeper_pb2.py  cloudkeeper_pb2_grpc.py  config.py  configuration.py  constants.py  exception.py  exceptions.py  imagemanager.py  keystone_client.py  main.py  mapping.py  openstack_client.py  server.py  utils.py
cloudkeeper_os/grpc/: core_connector.py  server.py
cloudkeeper_os/openstack/: auth.py  exceptions.py  glance.py  handler.py
etc/cloudkeeper-os/: cloudkeeper-os-config-generator.conf  cloudkeeper-os.conf.sample  mapping.json.sample
tests/: cloudkeeper-os-client_local.py  cloudkeeper-os-client_remote.py  cloudkeeper-os-test.py
tests/openstack/: metadata_to_dict.py  test_auth.py
