[metadata]
name = cloudkeeper-os
author = Jerome Pansanel 
author-email = jerome.pansanel@iphc.cnrs.fr
summary = The OpenStack backend for CloudKeeper
description-file =
    README.md
home-page = https://github.com/the-cloudkeeper-project/cloudkeeper-os
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    cloudkeeper_os
data_files = 
    /etc/cloudkeeper-os =
        etc/cloudkeeper-os/cloudkeeper-os.conf.sample
        etc/cloudkeeper-os/mapping.json.sample

[entry_points]
console_scripts =
    cloudkeeper-os = cloudkeeper_os.server:serve

oslo.config.opts =
    cloudkeeper_os.config = cloudkeeper_os.config:list_opts

